objects/noduplicates__Matching_Rule_Filter__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Is_Subset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Subset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Lookup_Name__c</fullName>
        <label>Lookup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Matching_Rule__c</fullName>
        <label>Matching Rule</label>
        <referenceTo>noduplicates__Matching_Rule__c</referenceTo>
        <relationshipLabel>Matching Rule Filters</relationshipLabel>
        <relationshipName>Matching_Rule_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>noduplicates__Number__c</fullName>
        <label>Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>noduplicates__Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Operator__c</fullName>
        <label>Operator</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Matching Rule Filter</label>
    <listViews>
        <fullName>noduplicates__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MRF-{0000000}</displayFormat>
        <label>Matching Rule Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Rule Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>